; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/rpcrt4/extr_cstub.c_test_CreateProxy.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/rpcrt4/extr_cstub.c_test_CreateProxy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@IID_if1 = common dso_local global i32 0, align 4
@if1_proxy_vtbl = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@IID_if2 = common dso_local global i32 0, align 4
@if2_proxy_vtbl = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@IID_if3 = common dso_local global i32 0, align 4
@if3_proxy_vtbl = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@IID_if4 = common dso_local global i32 0, align 4
@if4_proxy_vtbl = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @test_CreateProxy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_CreateProxy(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @if1_proxy_vtbl, i32 0, i32 0), align 4
  %5 = call i32 @create_proxy_test(i32* %3, i32* @IID_if1, i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @if2_proxy_vtbl, i32 0, i32 0), align 4
  %8 = call i32 @create_proxy_test(i32* %6, i32* @IID_if2, i32 %7)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @if3_proxy_vtbl, i32 0, i32 0), align 4
  %11 = call i32 @create_proxy_test(i32* %9, i32* @IID_if3, i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @if4_proxy_vtbl, i32 0, i32 0), align 4
  %14 = call i32 @create_proxy_test(i32* %12, i32* @IID_if4, i32 %13)
  ret void
}

declare dso_local i32 @create_proxy_test(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
